// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - Datetime reducer Should set the all day 1`] = `
Object {
  "allDay": true,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the all day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "June 25, 2018 4:00 pm",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the end time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": true,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the multi day 2`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the natural language label 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "2 weeks from now",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator date 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": " > ",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the separator time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": " | ",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "June 5, 2018 5:00 pm",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the start time 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should set the timezone 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": false,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;

exports[`[STORE] - Datetime reducer Should toggle the multi day 1`] = `
Object {
  "allDay": false,
  "dateTimeSeparator": "@",
  "end": "2018-07-19 20:00:00",
  "multiDay": true,
  "naturalLanguage": "",
  "start": "2018-07-19 19:30:00",
  "timeRangeSeparator": "-",
  "timezone": "UTC",
}
`;
